--- a/src/app/home-router/csgo/cs-results/cs-results.component.html
+++ b/src/app/home-router/csgo/cs-results/cs-results.component.html
@@ -1,5 +1,5 @@
 <div class="blocktest">
-    <div class="blur imageCSnoA" alt="cs:go | Eesports">
+    <div class="imageCSnoA" alt="cs:go | Eesports">
         <div class="content">
             <div class="row justify-content-md-center">
                 <div class="col-md-12 col-sm-12">
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div class="col-lg-8 col-md-8">
+                <div class="col-lg-12 col-md-8">
                     <pagination-controls class="my-pagination" maxSize="3" (pageChange)="p = $event"></pagination-controls>
                 </div>
             </div>
