--- a/src/app/home-router/csgo/team-page/team-page.component.html
+++ b/src/app/home-router/csgo/team-page/team-page.component.html
@@ -1,5 +1,5 @@
 <div class="blocktest">
-  <div class="blur imageCSnoA" alt="cs:go | Eesports">
+  <div class="imageCSnoA" alt="cs:go | Eesports">
     <div class="content">
       <div class="container-fluid">
         <div class="box-holder">
