added last games, top5, streams to home page for csgp

--- a/src/app/home-router/csgo/csgo.component.html
+++ b/src/app/home-router/csgo/csgo.component.html
@@ -1,25 +1,118 @@
 
 <div class="blocktest">
-    <div [ngClass]="router.url === '/csgo' ? 'imageCSnoA' : 'imageCS'" class="blur" alt="cs:go | Eesports">
+    <div [ngClass]="router.url === '/csgo' ? 'imageCSnoA' : 'imageCS'" alt="cs:go | Eesports">
         <div *ngIf="router.url === '/csgo'" class="content">
-            <div class="row">
-                <div style="margin-top: 2%;">
-                    <div class="recentGamesHeader col-lg-3">Recent Games</div>
-                    <div class="rankingsHeader col-lg-3">Rankings</div>
-                    <div class="newsHeader col-lg-6">News</div>
-                </div>
+            <div class="row" style="padding-top: 2%;">
+                
+                    <div class="recentGamesHeader col-lg-2"><p class="text-center headlines">Last games</p>
+                    
+                        <table class="table table-hover table-dark text-center">
+                              
+                                <tbody>
+                                    <tr *ngFor="let post of _postArrayResults| paginate: { itemsPerPage: 10, currentPage: p }; let i = index" (click)="selectId(post.id)" style="cursor: pointer;">
+                                        <div *ngIf="i<5">
+                                        <td class="name-align">
+                                                <div class="items-align team1">
+                                                    <div class="textShrink">{{post.team1.name}}</div>
+                                                    <img src="https://static.hltv.org/images/team/logo/{{post.team1.id}}" width="20px" height="20px" alt="{{post.team1.name}}">
+                                                </div>
+                                                
+                                        </td>
+                                        <td class="resultScore">
+                                                <!-- <span  [ngStyle]="{'color':post.result |  >= 16 ? 'green' : 'red'}">{{post.result | slice:0:2}}</span> -->
+                                            <span  [ngStyle]="">{{post.result | slice:0:2}}</span> -
+                                            <span  [ngStyle]="">{{post.result | slice:4:7}}</span>
+                                        </td>
+                                        <td class="name-align">
+                                                <div class="items-align team2">
+                                                    <img src="https://static.hltv.org/images/team/logo/{{post.team2.id}}" width="20px" height="20px" alt="{{post.team2.name}}">
+                                                    <div class="textShrink">{{post.team2.name}}</div>
+                                                </div>
+                                        </td>
+                                    
+                                        <input id="matchId" type="hidden" value="{{post.id}}">
+                                    </div>
+                                    </tr>
+                                </tbody>
+                            </table>
+                    
+                    
+                    
+                    </div>
+
+
+                    <div class="newsHeader col-lg-5"><p class="text-center headlines">News</p>
+                            <img class="img-fluid" src="https://static.hltv.org//images/galleries/1693-full/1528226898.843.jpeg" height="100%" width="100%"><p></p>
+                            <p class="notBold">NiP have announced the addition of Jonas "Lekr0" Olofsson, who has replaced William "draken" Sundin in the active roster.<p>
+                                <p class="notBold">
+                                    The decision comes as a result of differences "both personal and in-game" between the AWPer and the team, who jumped at the possibility of acquiring Lekr0 after he had been replaced by Richard "Xizt" Landström in fnatic.
+                                    
+                                    In a statement, the team's coach, Faruk "pita" Pita, explained that NiP have been unable to "find the right mix" with draken regarding the roles within the squad.</p>
+                    </div>
+
+
+
+                    <div class="rankingsHeader col-lg-2"><p class="text-center headlines">Top 5</p>
+                    
+                        <table class="table  table-hover table-dark text-center">
+                                <tbody>
+                            
+                                  <tr *ngFor="let post of _postArrayRanking; let i = index" (click)="selectTeamId(post.team.id)" style="cursor: pointer;">
+                                      <div *ngIf="i<5">
+                                      <td class="placement">
+                                   <div [ngStyle]="{'color':post.place === '1' ? 'gold' : 'gold'}" *ngIf="post.place == '1'"><i class="fa fa-trophy gold"></i></div>
+                                   <div [ngStyle]="{'color':post.place === '2' ? 'gold' : 'silver'}" *ngIf="post.place == '2'"><i class="fa fa-trophy gold"></i></div>
+                                   <div [ngStyle]="{'color':post.place === '3' ? '#CD7F32' : '#CD7F32'}" *ngIf="post.place == '3'"><i class="fa fa-trophy gold"></i></div>    {{post.place}}
+                                      </td>
+                                      <td class="team-logo">
+                                          <img src="https://static.hltv.org/images/team/logo/{{post.team.id}}" width="35px" height="35px" alt="{{post.team.name}}">
+                                      </td>
+                                      <td class="team-align">
+                                        {{post.team.name}}
+                                      </td>
+                                      <input id="matchId" type="hidden" value="{{post.id}}">
+                                    </div>
+                                  </tr>
+                                </tbody>
+                            </table>
+                    </div>
+                
             </div>
 
-            <div class="row">
-                <div class="col-lg-6"><img src="https://static.hltv.org//images/galleries/1693-full/1528226898.843.jpeg" height="80%" width="40%"></div>
-            </div>
-                    <div style="width:40%; color: #ccc;
-                    margin-left: 31%;"><p>NiP have announced the addition of Jonas "Lekr0" Olofsson, who has replaced William "draken" Sundin in the active roster.<p>
-                        <p>The decision comes as a result of differences "both personal and in-game" between the AWPer and the team, who jumped at the possibility of acquiring Lekr0 after he had been replaced by Richard "Xizt" Landström in fnatic.</p>
+            <div class="row" style="padding-top: 2%;">
+                
+                    <div class="recentGamesHeader col-lg-2"><p class="text-center headlines"></p></div>
+
+
+                    <div class="newsHeader col-lg-5"><p class="text-center headlines">Upcoming matches</p>
                     </div>
-            
+
+
+
+                    <div class="rankingsHeader col-lg-2"><p class="text-center headlines">Streams</p>
+                        
+
+                        <table class="table table-hover table-dark">
+                                <tbody>
+                                  <tr *ngFor="let post of _postArrayStreams; let i = index">
+                                      <div *ngIf="i<15">
+                                        <a href="https://www.hltv.org/{{post.hltvLink}}" target="_blank">
+                                    <td><img alt="Russia" src="https://static.hltv.org/images/bigflags/30x20/{{post.country.code}}.gif" class="flag" title="{{post.country.name}}"></td>
+                                    <td>{{post.name}}</td>
+                                    <td>{{post.viewers}}</td>
+                                </a>
+                                      </div>
+                                  </tr>
+                               
+                                </tbody>
+                              </table>
+                      
+                    </div>
+                
+            </div>
+
 
         </div> <!--CONtENT-->
     </div>
-</div>
+
 <app-footer></app-footer>
