--- a/src/app/home-router/csgo/team-page/team-page.component.html
+++ b/src/app/home-router/csgo/team-page/team-page.component.html
@@ -98,7 +98,7 @@
                     <div [ngStyle]="{'color':post.place === 'Group stage' ? 'white' : 'white'}" *ngIf="post.place == 'Group stage'"><i class="fa fa-trophy black"></i></div>
                     <div [ngStyle]="{'color':post.place === '1st' ? 'gold' : 'gold'}" *ngIf="post.place == '1st'"><i class="fa fa-trophy gold"></i></div>
                     <div [ngStyle]="{'color':post.place === '2nd' ? 'silver' : 'silver'}" *ngIf="post.place == '2nd'"><i class="fa fa-trophy silver"></i></div>
-                    <div [ngStyle]="{'color':post.place === '3rd' ? 'brown' : 'brown'}" *ngIf="post.place == '3rd'"><i class="fa fa-trophy bronze"></i></div>
+                    <div [ngStyle]="{'color':post.place === '3rd' ? '#CD7F32' : '#CD7F32'}" *ngIf="post.place == '3rd'"><i class="fa fa-trophy bronze"></i></div>
                     <div [ngStyle]="{'color':post.place === '1/4 final' ? 'grey' : 'grey'}" *ngIf="post.place == '1/4 final'"><i class="fa fa-trophy bronze"></i></div>
                   </td>
                   <td style="color:white">
