--- a/src/app/home-router/csgo/csgo.component.css
+++ b/src/app/home-router/csgo/csgo.component.css
@@ -1,33 +1,65 @@
 .newsHeader{
-    display: block;
-    background-color: #0026FF;
-    width: 40%;
-    margin: auto;
     padding: 5px;
     color: white;
     font-weight: 500;
+    margin-left: 9%;
+    margin-right: 10%;
 }
 
 .recentGamesHeader{
-    display: block;
-    background-color: #0026FF;
-    width: 20%;
-    margin: auto;
     padding: 5px;
     color: white;
     font-weight: 500;
-    float:left;
-    margin-left:5%;
+    margin-left: 3%;
+
 }
 
 .rankingsHeader{
-    display: block;
-    background-color: #0026FF;
-    width: 20%;
-    margin: auto;
     padding: 5px;
     color: white;
     font-weight: 500;
-    float: right;
-    margin-right: 5%;
+    margin-right: 3%;
 }
+
+.table td, .table th {
+   
+    vertical-align: middle;
+}
+
+.textShrink {
+    font-size:10px;
+  }
+
+  .resultScore{
+    width: 100px;
+    font-weight: 500;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .items-align{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-width: 1%;
+  }
+  
+  .resultScore{
+    width: 100px;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .notBold{
+      font-weight: 200;
+  }
+
+  .headlines{
+    text-transform: uppercase;font-size:12px; background-color: #353573;
+  }
+
+  a{
+      color:white;
+  }
